# cspade

./: .gitignore  Array.cc  Array.h  ArrayT.cc  ArrayT.h  CMakeLists.txt  Database.cc  Database.h  Eqclass.cc  Eqclass.h  HashTable.cc  Itemset.cc  Itemset.h  Lists.cc  Makefile  README  README.md  b2a.cc  calcdb.cc  calcdb.h  extl2.cc  extl2.h  exttpose.cc  exttpose.h  getconf.cc  getconf.h  makebin.cc  makebin.h  maxgap.cc  maxgap.h  partition.cc  partition.h  sequence.cc  spade.h  utils.cc  utils.cpp  utils.h
